k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: social-service
  namespace: javapro-team33
spec:
  selector:
    app: social-service
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: NodePort
