k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: social-service
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: social-service-ingress
    servicePort: 80
  rules:
    - host: social-service
      http:
        paths:
          - path: /(api)/(.*)
            pathType: Prefix
            backend:
              service:
                name: social-service
                port:
                  number: 80
          - path: /()(.*)
            pathType: Prefix
            backend:
              service:
                name: front-service
                port:
                  number: 80
